crates/huak_cli/tests/snapshots/test_help__tests__add_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - add
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Add dependencies to the project

Usage: huak add [OPTIONS] <DEPENDENCIES>... [-- <TRAILING>...]

Arguments:
  <DEPENDENCIES>...  
  [TRAILING]...      Pass trailing arguments with `--`

Options:
      --group <GROUP>  Adds an optional dependency group
  -q, --quiet          
  -h, --help           Print help

----- stderr -----

