crates/huak_cli/tests/snapshots/test_help__tests__clean_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - clean
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Remove tarball and wheel from the built project

Usage: huak clean [OPTIONS]

Options:
      --include-pyc      Remove all .pyc files
      --include-pycache  Remove all __pycache__ directories
  -q, --quiet            
  -h, --help             Print help

----- stderr -----

