crates/huak_cli/tests/snapshots/test_help__tests__completion_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - completion
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Generates a shell completion script for supported shells

Usage: huak completion [OPTIONS]

Options:
  -s, --shell <shell>  [possible values: bash, elvish, fish, powershell, zsh]
  -q, --quiet          
  -h, --help           Print help

----- stderr -----

