crates/huak_cli/tests/snapshots/test_help__tests__init_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - init
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Initialize the existing project

Usage: huak init [OPTIONS]

Options:
      --app     Use an application template
      --lib     Use a library template [default]
      --no-vcs  Don't initialize VCS in the project
  -q, --quiet   
  -h, --help    Print help

----- stderr -----

