crates/huak_cli/tests/snapshots/test_help__tests__install_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - install
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Install the dependencies of an existing project

Usage: huak install [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
      --groups <GROUPS>...  Install optional dependency groups
  -q, --quiet               
  -h, --help                Print help

----- stderr -----

