crates/huak_cli/tests/snapshots/test_help__tests__lint_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - lint
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Lint the project's Python code

Usage: huak lint [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--` to `ruff`

Options:
      --fix       Address any fixable lints
      --no-types  Perform type-checking
  -q, --quiet     
  -h, --help      Print help

----- stderr -----

