crates/huak_cli/tests/snapshots/test_help__tests__run_help.snap
---
source: crates/huak_cli/tests/test_help.rs
info:
  program: huak
  args:
    - run
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Run a command within the project's environment context

Usage: huak run [OPTIONS] [COMMAND]...

Arguments:
  [COMMAND]...  

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

